add ipynb of last few lectures

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ref/
 Lecture1/~$电气工程建模与仿真.pptx
 Lecture8/DeepLearning/__pycache__/dataLoader.cpython-36.pyc
 Lecture8/DeepLearning/__pycache__/dataLoader.cpython-38.pyc
+Lecture6/Lesson1.1.1-EDA/__pycache__/corr_plot.cpython-38.pyc
