ignore some shit

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Lecture1/~$电气工程建模与仿真.pptx
 Lecture8/DeepLearning/__pycache__/dataLoader.cpython-36.pyc
 Lecture8/DeepLearning/__pycache__/dataLoader.cpython-38.pyc
 Lecture6/Lesson1.1.1-EDA/__pycache__/corr_plot.cpython-38.pyc
+Lecture3/code/temp.py
+Lecture5/~$更多优化.pptx
+Lecture5/~$更多优化2.pptx
