subtle changes from last semester

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ Lecture6/Lesson1.1.1-EDA/__pycache__/corr_plot.cpython-38.pyc
 Lecture3/code/temp.py
 Lecture5/~$更多优化.pptx
 Lecture5/~$更多优化2.pptx
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/2021/FileContentIndex/2b302f16-cc47-4f1a-9b4a-7df2cb1f8b62.vsidx
+.vs/2021/FileContentIndex/64b08e12-56ee-447b-b332-049a33cbf4c7.vsidx
+.vs/2021/FileContentIndex/68623f6f-bdb5-425d-bd87-b061ffbbb0bb.vsidx
+.vs/2021/FileContentIndex/e51167a4-42fa-4a66-9716-e939e00307e9.vsidx
+.vs/2021/FileContentIndex/f9faa108-1641-4840-b07f-bc72371358cd.vsidx
+.vs/2021/FileContentIndex/read.lock
+.vs/2021/v17/.suo
+.vs/2021/v17/workspaceFileList.bin
