--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,4 @@ Lecture5/~$更多优化2.pptx
 .vs/2021/FileContentIndex/read.lock
 .vs/2021/v17/.suo
 .vs/2021/v17/workspaceFileList.bin
-solutions/
+SolutionsBackup/
