--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ Lecture5/~$更多优化2.pptx
 SolutionsBackup/
 solutions/
 temp.py
+Lecture6/~$lecture1.1.pptx
+Lecture4/code/temp.py
+Lecture4/code/temp.py
+Lecture6/temp/auto_clean.csv
+Lecture6/temp/exp1.3.xlsx
+Lecture6/temp/exp1.5.xlsx
+Lecture6/temp/exp1.6.csv
+Lecture6/temp/practice.ipynb
